# RS-Processing

./: CMakeLists.txt  README.md  main.cpp
function/include/: bandcomb.h  imgStretch.h  newfolder.h
function/src/: bandcomb.cpp  imgStretch.cpp  newfolder.cpp
include/: information.h  login.h  mainwindow.h  newfolder.h  picturebox.h  treemenu.h
include/processing/: bandCombination.h  process.h
process/: image.cpp  image.h  process.cpp
src/: information.cpp  login.cpp  mainwindow.cpp  newfolder.cpp  picturebox.cpp  treemenu.cpp
src/processing/: bandCombination.cpp  image.cpp  process.cpp
test/: 1.png.aux.xml  gaojing_subset.tif.aux.xml
ui/: bandcombination.ui  imgStrech.ui  login.ui  mainwindow.ui  newfolder.ui  ui_login.h  ui_mainwindow.h
